# yt-mirror

./: .gitignore  .releaserc  CHANGELOG.md  README.md  TODO.md  docs.md  yt-mirror.cabal
.github/workflows/: release.yml
app/: Dependencies.hs  Main.hs  Program.hs
src/: Actor.hs  ChromiumRepository.hs  Definitions.hs  Downloader.hs  FirefoxRepository.hs  Helpers.hs  Lib.hs  Logger.hs  ProcessRepository.hs  Youtube.hs
