cabal-version:      2.4
name:               yt-mirror
version:            0.1.0.0
author:             Soanvig
maintainer:         soanvig@gmail.com

library
    hs-source-dirs:      src
    exposed-modules:     Lib

    other-modules:
        Definitions
        FirefoxRepository
        ProcessRepository
        Youtube
        Logger
        Downloader

    build-depends:    base ^>=4.14.1.0
                    , sqlite-simple
                    , text
                    , url
                    , mtl
                    , process

  default-language:    Haskell2010

executable yt-mirror-exe
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base ^>=4.14.1.0
                     , relude ^>= 1.0.0.0
                     , yt-mirror
    default-language: Haskell2010

