cabal-version:      2.4
name:               yt-mirror
version:            0.1.0.0
author:             Soanvig
maintainer:         soanvig@gmail.com

library
    hs-source-dirs:      src
    exposed-modules:     Lib
    default-extensions:  QuasiQuotes
                         OverloadedStrings
                         LambdaCase

    other-modules:
        Definitions
        FirefoxRepository
        ChromiumRepository
        ProcessRepository
        Youtube
        Logger
        Downloader
        Actor
        Helpers

    build-depends:    base ^>=4.14.1.0
                    , sqlite-simple
                    , text
                    , url
                    , mtl
                    , process
                    , stm
                    , string-interpolate
                    , network-uri
                    , split
                    , ansi-terminal
                    , random
                    , time
                    , aeson
                    , bytestring
                    , filepath

  default-language:    Haskell2010

executable yt-mirror-exe
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:
        Program
        Dependencies
    build-depends:    base ^>=4.14.1.0
                    , yt-mirror
                    , optparse-applicative
                    , directory
    default-language: Haskell2010
    ghc-options: -threaded

